2007-10-10  Anupam Sengupta  <anupamsg@gmail.com>

	* README: Restructured the format.

	* Rakefile: Added Hoe related logic. If not present, the Rakefile
	will default to old behavior.

2007-10-09  Anupam Sengupta  <anupamsg@gmail.com>

	* Rakefile: Added setup.rb related tasks. Also added the setup.rb in the PKG_FILES list.

2007-10-01  Anupam Sengupta  <anupamsg@gmail.com>

	* Rakefile: Added an optional task for rcov code coverage.
	  Added a dependency for rake in the Gem Specification.

	* test/test_binarytree.rb: Removed the unnecessary dependency on "Person" class.

	* test/test_tree.rb: Removed dependency on the redundant "Person" class.
	(TC_TreeTest::test_comparator): Added a new test for the spaceship operator.
	(TC_TreeTest::test_hasContent): Added tests for hasContent? and length methods.

2007-08-30  Anupam Sengupta  <anupamsg@gmail.com>

	* test/test_tree.rb (TC_TreeTest::test_preordered_each, TC_TreeTest::test_breadth_each, TC_TreeTest::test_detached_copy):
	Added new tests for the new functions added to tree.rb.

	* lib/tree.rb (Tree::TreeNode::detached_copy, Tree::TreeNode::preordered_each, Tree::TreeNode::breadth_each):
	Added new functions for returning a detached copy of the node and
	for performing breadth first traversal. Also added the pre-ordered
	traversal function which is an alias of the existing 'each' method.

	* test/test_binarytree.rb (TC_BinaryTreeTest::test_swap_children):
	Added a test case for the children swap function.

	* lib/tree/binarytree.rb (Tree::BinaryTreeNode::swap_children):
	Added new function to swap the children. Other minor changes in
	comments and code.

2007-07-18  Anupam Sengupta  <anupamsg@gmail.com>

	* lib/tree/binarytree.rb (Tree::BinaryTreeNode::leftChild /
	rightChild): Minor cosmetic change on the parameter name.

	* test/testbinarytree.rb (TC_BinaryTreeTest::test_isLeftChild):
	Minor syntax correction.

	* lib/tree.rb (Tree::TreeNode::depth): Added a tree depth
	computation method.